2021-02-22
+ MINOR
  - Improved Tangent calculations when importing 3D Models to fix spontaneous visible seam generation along UV2 and/or Vertex Color seams.
  - Update Textools Website Links
  - Updated Item Sets File
+ BUGFIXES
   - Fixed a TexTools crash issue with some furniture items (Thanks Kaya!)

2021-01-13
+ MINOR
  - Item Sets file updated for 5.41
  - Easy-Installer now automatically prompts for admin rights rather than forcing the user to set them manually.
+ BUGFIXES
  - Offsets updated for KR 5.3 patch.
  - Resolved an issue wherein furniture metadata mods could cause metadata on unrelated items to break.
  
2021-01-07
+ MINOR
  - Verbiage Updates.
  - Slight consistency adjustment to basic mod import dialog behavior.
+ BUGFIX
  - Fixed Equipment Decals under #100 not being accessible.
  - Fixed Chinese Client issues with FFXIV patch 5.31

2020-12-10
v2.3.4.17
+ MINOR
  - Improved some error messages
  - Updated base Item Sets file to include FFXIV v5.4 items
  
2020-12-08
v2.3.4.16
+ BUGFIXES
  - Offsets for global version updated for FFXIV Version 5.4

2020-12-03
v2.3.4.15
+ BUGFIXES
  - Chinese offsets updated for FFXIV Version 5.3
  - The Mod Import Time display no longer counts time spent in the item select screen.
  - When converting items on import, extraneous/unused files will no longer be added to the original item.

2020-11-02
v2.3.4.14
+ BUGFIXES
  - Resolved an issue wherein the application would crash when attempting to export a colorset file as PNG or BMP
    - Colorset files will now always export as DDS.
  - Resolved an issue wherein non-shape morph channels/blend shapes were not being properly applied on imported meshes.
  - Resolved an issue wherein restoring index backups with improper DAT counts would not have their DAT counts corrected after restoration.
  - Resolved an issue wherein importing multiple metadata files affecting the same set could result in the import variant data being set improperly.

2020-10-23
v2.3.4.13
+ MINOR